--- a/packages/serverpod/pubspec.yaml
+++ b/packages/serverpod/pubspec.yaml
@@ -4,7 +4,8 @@
 name: serverpod
 version: 2.0.0
 description: Serverpod is an open-source, scalable app server, written in Dart for the Flutter community.
-repository: https://github.com/serverpod/serverpod
+repository: https://github.com/emanet29/serverpod/
+#repository: https://github.com/serverpod/serverpod
 homepage: https://serverpod.dev
 issue_tracker: https://github.com/serverpod/serverpod/issues
 documentation: https://docs.serverpod.dev
@@ -34,7 +35,7 @@ dependencies:
   system_resources: ^1.6.0
   vm_service: ">=13.0.0 <15.0.0"
   yaml: ^3.1.1
-  #serverpod_shared: 2.0.0
+  serverpod_shared: 2.0.0
   serverpod_serialization: 2.0.0
 
 dev_dependencies:
