--- a/packages/serverpod/pubspec.yaml
+++ b/packages/serverpod/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   system_resources: ^1.6.0
   vm_service: ">=13.0.0 <15.0.0"
   yaml: ^3.1.1
-  serverpod_shared: 2.0.0
+  #serverpod_shared: 2.0.0
   serverpod_serialization: 2.0.0
 
 dev_dependencies:
