--- a/packages/serverpod/pubspec.yaml
+++ b/packages/serverpod/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   vm_service: ">=13.0.0 <15.0.0"
   yaml: ^3.1.1
   #serverpod_shared: 2.0.0
+  serverpod_shared:
+    publish_to: none
+      path: ../serverpod_shared
   serverpod_serialization: 2.0.0
 
 dev_dependencies:
